objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contribution_Level__c</fullName>
        <formula>IF( Contribution_Percentage__c &lt;=0.10,&quot;Low&quot;, 
IF(Contribution_Percentage__c &gt;0.10 &amp;&amp; Contribution_Percentage__c &lt;0.40,&quot;Medium&quot;, 
IF(Contribution_Percentage__c &gt;0.40,&quot;High&quot;,NULL) 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contribution Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contribution_Percentage__c</fullName>
        <formula>ExpectedRevenue  / 100000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contribution Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cylinder_Volume__c</fullName>
        <formula>3.14 * ( Radius__c  *  Radius__c ) *  Height__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cylinder Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount_Rate__c</fullName>
        <label>Discount Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radius__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Radius</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Close_Date_Alert</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( IsClosed )  &amp;&amp;  CloseDate  &lt;  TODAY()</errorConditionFormula>
        <errorMessage>The close date must be today or later (we won’t check this)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Discount_Rate_Rule</fullName>
        <active>false</active>
        <errorConditionFormula>OR(Discount_Rate__c &lt; 0, Discount_Rate__c &gt; 0.40)</errorConditionFormula>
        <errorMessage>The Discount Rate must not exceed 40%.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Test1</fullName>
        <active>false</active>
        <errorConditionFormula>AND( OR( ISPICKVAL(StageName, &quot;Closed Won&quot;) , ISPICKVAL(StageName, &quot;Closed Lost&quot;)) ,(Amount&gt;50000),NOT(ISPICKVAL(Approval_Status__c ,&quot;Approved&quot;)))</errorConditionFormula>
        <errorMessage>All high-value opportunities must be approved for closure. Click the Request Close button</errorMessage>
    </validationRules>
</CustomObject>